# eis

./: .gitignore  README.md
_ADMIN/: buildPackage.sh  calculateChecksums.sh  checkForChanges.sh  checkForNewPackages.sh  cleanupPackageFolder.sh  createPackageList.sh  createRepoIndex.sh  includePackagesIntoRepository.sh  readme.txt  releasePackage.sh  removeJobConfigWithoutHistory.sh  settings.default.txt
bonnie/: APKBUILD
cui-acme/: APKBUILD  cui-acme-update.sh  cui-acme.check  cui-acme.cron  cui-acme.help  cui-acme.post-deinstall  cui-acme.post-install  cui-acme.pre-upgrade  cui-acme.setup.services.acme.menu  cui-acme.sh  cui-acme.txt
cui-apache2/: APKBUILD  cui-apache2-update.sh  cui-apache2.check  cui-apache2.check.exp  cui-apache2.dauth.sh  cui-apache2.default  cui-apache2.dlevel.sh  cui-apache2.dlog.sh  cui-apache2.dsig.sh  cui-apache2.help  cui-apache2.lib  cui-apache2.menu  cui-apache2.post-deinstall  cui-apache2.post-install  cui-apache2.post-upgrade  cui-apache2.pre-upgrade  cui-apache2.sh  cui-apache2.txt
cui-bind/: APKBUILD  cui-bind-update.sh  cui-bind.check  cui-bind.check.exp  cui-bind.check.ext  cui-bind.default  cui-bind.dquery.sh  cui-bind.dtransfer.sh  cui-bind.help  cui-bind.menu  cui-bind.post-deinstall  cui-bind.post-install  cui-bind.post-upgrade  cui-bind.pre-upgrade  cui-bind.sh  cui-bind.txt
cui-clamav/: APKBUILD  cui-clamav-update.sh  cui-clamav.check  cui-clamav.check.exp  cui-clamav.default  cui-clamav.dregions.sh  cui-clamav.dupdates.sh  cui-clamav.help  cui-clamav.initd  cui-clamav.menu  cui-clamav.post-deinstall  cui-clamav.post-install  cui-clamav.post-upgrade  cui-clamav.pre-upgrade  cui-clamav.sh  cui-clamav.txt  cui-clamav.txt.toc
cui-dhcp/: APKBUILD  cui-dhcp-update.sh  (+11 more)
cuimenu-bin/source/list-files.cui/: Makefile  Makefile.in  configure.ac  filetools.c  filetools.h  global.h  history.txt  main.c  mainwin.c  mainwin.h
(+1128 files in other folders)
